--- a/site/layouts/partials/home/plugins.html
+++ b/site/layouts/partials/home/plugins.html
@@ -50,8 +50,15 @@
       <hr class="my-4">
       <div class="row g-3">
         {{- range $plugin := .Site.Data.plugins -}}
-          {{- /* TODO we should use urls.JoinPath here too, but the links include `#` which gets escaped */ -}}
-          {{- $href := printf "/docs/%s/%s" $.Site.Params.docs_version $plugin.link }}
+          {{- $href := urls.JoinPath "/docs" $.Site.Params.docs_version -}}
+          {{- $plugin_link := urls.Parse $plugin.link -}}
+          {{- if $plugin_link.Fragment -}}
+            {{- $href = printf "%s#%s" (urls.JoinPath $href $plugin_link.RequestURI) $plugin_link.Fragment -}}
+          {{- else -}}
+            {{- $href = urls.JoinPath $href $plugin_link -}}
+          {{- end }}
+          
+          {{- /* $href = cond (not (eq $plugin_link.Fragment "")) (printf "%s#%s" (urls.JoinPath $href $plugin_link.RequestURI) $plugin_link.Fragment) (urls.JoinPath $href $plugin_link) */ -}}
           <div class="col-sm-6 mb-2">
             <a class="d-block pe-lg-4 text-decoration-none lh-sm" href="{{ $href }}">
               <h4 class="mb-0 fs-5 fw-semibold">{{ $plugin.name }}</h4>
